darn it i left my auth token in :skull:
dont worry its regenerated
why am i so stupid

--- a/cloudlink [GC] SERVER.ipynb
+++ b/cloudlink [GC] SERVER.ipynb
@@ -38,7 +38,7 @@
         "# Ask for the ngrok authtoken\n",
         "print(\"Get your authtoken from https://dashboard.ngrok.com/auth\")\n",
         "\n",
-        "authtoken = \"1kleoNBXXyfz5rNSx0fraUE0s9Z_4Yg8sKeJwboQ1SR6FH36i\"  # input your Ngrok auth token everytime you run the cell or simply replace \"getpass.getpass()\" with your token in \"double quotes\"\n",
+        "authtoken = input(\"token >\")  # input your Ngrok auth token everytime you run the cell or simply replace \"getpass.getpass()\" with your token in \"double quotes\"\n",
         "! ngrok authtoken $authtoken # login to ngrok\n",
         "\n",
         "# Connect to ngrok\n",
